--- a/mainstyles.css
+++ b/mainstyles.css
@@ -6,9 +6,11 @@ h1 {
 }
 body {
     background-color: #5b8080;
+    alignment: left;
 
 }
 
-a img {
-    border:dashed;
+
+footer {
+    text-align: center;
 }
