--- a/mainstyles.css
+++ b/mainstyles.css
@@ -5,6 +5,11 @@ h1 {
     background-color: #c9e3ff;
 
 }
+
+h2 {
+    margin-left: 30px;
+}
+
 body {
     background-color: #7e9eff;
     alignment: left;
@@ -17,7 +22,6 @@ nav {
     background-color: #c9e3ff;
     border: outset;
 }
-
 
 footer {
     text-align: center;
