--- a/mainstyles.css
+++ b/mainstyles.css
@@ -10,11 +10,23 @@ h2 {
     margin-left: 30px;
 }
 
+h3 {
+    margin-left: 10px;
+}
+
 body {
     background-color: #7e9eff;
     alignment: left;
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 
+}
+
+p {
+    font-style: inherit;
+    font-family: Calibri;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 nav {
