--- a/mainstyles.css
+++ b/mainstyles.css
@@ -22,12 +22,16 @@ body {
 
 }
 
+
 p {
     font-style: inherit;
     font-family: Calibri;
     margin-left: 50px;
     margin-right: 50px;
+    font-size: x-large;
 }
+
+
 
 nav {
     text-align: center;
